add cluster analysis

--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -55,7 +55,12 @@
     "from pycirclize import Circos\n",
     "from pycirclize.parser import Gff\n",
     "from matplotlib.patches import Patch\n",
-    "from matplotlib.lines import Line2D"
+    "from matplotlib.lines import Line2D\n",
+    "\n",
+    "import numpy as np\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import silhouette_score"
    ]
   },
   {
@@ -876,7 +881,187 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#| export\n",
+    "def kmeans_cluster_analysis(df, cluster_sizes, random_state=42, features=None, figsize=(12, 6), \n",
+    "                          standardize=False, fill_na=False):\n",
+    "    \"\"\"\n",
+    "    Perform K-means clustering analysis on a pandas DataFrame and visualize the results\n",
+    "    with both normalized inertia and silhouette scores on the same plot.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    df : pandas.DataFrame\n",
+    "        The input data to cluster.\n",
+    "    cluster_sizes : list\n",
+    "        List of cluster sizes (k values) to evaluate.\n",
+    "    random_state : int, optional\n",
+    "        Random seed for reproducibility (default: 42).\n",
+    "    features : list, optional\n",
+    "        List of column names to use for clustering. If None, all columns are used.\n",
+    "    figsize : tuple, optional\n",
+    "        Figure size for the output plot (default: (12, 6)).\n",
+    "    standardize : bool, optional\n",
+    "        Whether to standardize the features (default: False).\n",
+    "    fill_na : bool, optional\n",
+    "        Whether to fill missing values with column means (default: False).\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    tuple\n",
+    "        (figure, inertia_values, silhouette_values) - The matplotlib figure object,\n",
+    "        the list of inertia values, and the list of silhouette scores.\n",
+    "    \"\"\"\n",
+    "    # Prepare the data\n",
+    "    if features is None:\n",
+    "        features = df.columns.tolist()\n",
+    "    \n",
+    "    X = df[features].copy()\n",
+    "    \n",
+    "    # Check for non-numeric data\n",
+    "    non_numeric_cols = X.select_dtypes(exclude=['number']).columns.tolist()\n",
+    "    if non_numeric_cols:\n",
+    "        raise ValueError(f\"Non-numeric columns found: {non_numeric_cols}. \"\n",
+    "                         f\"Please remove or transform them before clustering.\")\n",
+    "    \n",
+    "    # Handle missing values\n",
+    "    if X.isna().any().any():\n",
+    "        if fill_na:\n",
+    "            print(\"Filling missing values with column means.\")\n",
+    "            X = X.fillna(X.mean())\n",
+    "        else:\n",
+    "            raise ValueError(\"Missing values found in the data. Set fill_na=True to automatically handle them or preprocess your data before clustering.\")\n",
+    "    \n",
+    "    # Prepare data for clustering\n",
+    "    if standardize:\n",
+    "        print(\"Standardizing features.\")\n",
+    "        scaler = StandardScaler()\n",
+    "        X_scaled = scaler.fit_transform(X)\n",
+    "    else:\n",
+    "        X_scaled = X.values\n",
+    "    \n",
+    "    # Compute K-means for different cluster sizes\n",
+    "    inertia_values = []\n",
+    "    silhouette_values = []\n",
+    "    \n",
+    "    for k in cluster_sizes:\n",
+    "        # Fit K-means\n",
+    "        kmeans = KMeans(n_clusters=k, random_state=random_state, n_init=10)\n",
+    "        kmeans.fit(X_scaled)\n",
+    "        inertia_values.append(kmeans.inertia_)\n",
+    "        \n",
+    "        # Compute silhouette score (not defined for k=1)\n",
+    "        if k > 1:\n",
+    "            labels = kmeans.labels_\n",
+    "            silhouette_avg = silhouette_score(X_scaled, labels)\n",
+    "            silhouette_values.append(silhouette_avg)\n",
+    "        else:\n",
+    "            silhouette_values.append(0)  # Placeholder for k=1\n",
+    "    \n",
+    "    # Normalize values\n",
+    "    max_inertia = max(inertia_values)\n",
+    "    normalized_inertia = [i / max_inertia for i in inertia_values]\n",
+    "    \n",
+    "    max_silhouette = max(silhouette_values)\n",
+    "    normalized_silhouette = [s / max_silhouette for s in silhouette_values]\n",
+    "    \n",
+    "    # Create the plot\n",
+    "    fig, ax = plt.subplots(figsize=figsize)\n",
+    "    \n",
+    "    # Plot normalized inertia (elbow curve)\n",
+    "    inertia_line, = ax.plot(cluster_sizes, normalized_inertia, 'o-', color='blue', label='Normalized Inertia')\n",
+    "    \n",
+    "    # Plot normalized silhouette scores\n",
+    "    silhouette_line, = ax.plot(cluster_sizes, normalized_silhouette, 'o-', color='red', label='Normalized Silhouette Score')\n",
+    "    \n",
+    "    # Add vertical lines at each cluster size\n",
+    "    for k in cluster_sizes:\n",
+    "        ax.axvline(x=k, color='gray', linestyle='--', alpha=0.3)\n",
+    "    \n",
+    "    # Customize the plot\n",
+    "    ax.set_title('K-means Evaluation', fontsize=15)\n",
+    "    ax.set_xlabel('Number of Clusters (k)', fontsize=12)\n",
+    "    ax.set_ylabel('Normalized Score', fontsize=12)\n",
+    "    ax.set_xticks(cluster_sizes)\n",
+    "    ax.grid(True, linestyle='--', alpha=0.7)\n",
+    "    \n",
+    "    # Find optimal k values\n",
+    "    best_inertia_idx = elbow_point(normalized_inertia)\n",
+    "    best_silhouette_idx = np.argmax(normalized_silhouette)\n",
+    "    \n",
+    "    best_k_inertia = cluster_sizes[best_inertia_idx]\n",
+    "    best_k_silhouette = cluster_sizes[best_silhouette_idx]\n",
+    "    \n",
+    "    # Add arrows to optimal points without text\n",
+    "    inertia_arrow = ax.annotate('', \n",
+    "                xy=(best_k_inertia, normalized_inertia[best_inertia_idx]),\n",
+    "                xytext=(best_k_inertia+0.5, normalized_inertia[best_inertia_idx]+0.1),\n",
+    "                arrowprops=dict(facecolor='blue', shrink=0.05, width=1.5, headwidth=8))\n",
+    "    \n",
+    "    silhouette_arrow = ax.annotate('', \n",
+    "                xy=(best_k_silhouette, normalized_silhouette[best_silhouette_idx]),\n",
+    "                xytext=(best_k_silhouette+0.5, normalized_silhouette[best_silhouette_idx]-0.1),\n",
+    "                arrowprops=dict(facecolor='red', shrink=0.05, width=1.5, headwidth=8))\n",
+    "    \n",
+    "    # Create custom legend handles for the arrows\n",
+    "    from matplotlib.lines import Line2D\n",
+    "    \n",
+    "    elbow_arrow_handle = Line2D([0], [0], color='blue', marker='>',\n",
+    "                              markersize=10, linestyle='-', linewidth=0)\n",
+    "    silhouette_arrow_handle = Line2D([0], [0], color='red', marker='>',\n",
+    "                                   markersize=10, linestyle='-', linewidth=0)\n",
+    "    \n",
+    "    # Create a legend with the arrows and lines\n",
+    "    legend_elements = [\n",
+    "        inertia_line, silhouette_line,\n",
+    "        elbow_arrow_handle, silhouette_arrow_handle\n",
+    "    ]\n",
+    "    legend_labels = [\n",
+    "        'Normalized Inertia', 'Normalized Silhouette Score',\n",
+    "        f'Best Elbow (k={best_k_inertia})', f'Best Silhouette (k={best_k_silhouette})'\n",
+    "    ]\n",
+    "    \n",
+    "    # Place the legend outside the plot\n",
+    "    ax.legend(legend_elements, legend_labels, loc='center left', bbox_to_anchor=(1.05, 0.5))\n",
+    "    \n",
+    "    # Adjust layout to make room for the legend\n",
+    "    fig.tight_layout()\n",
+    "    plt.subplots_adjust(right=0.75)\n",
+    "    \n",
+    "    # Return the figure, axis, and values to allow further customization\n",
+    "    return fig, ax, inertia_values, silhouette_values\n",
+    "\n",
+    "def elbow_point(values):\n",
+    "    \"\"\"\n",
+    "    Find the elbow point in a curve using the maximum curvature method.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    values : list\n",
+    "        The y-values of the curve.\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    int\n",
+    "        The index of the elbow point.\n",
+    "    \"\"\"\n",
+    "    # Simple method - find point of maximum curvature\n",
+    "    # Convert to numpy array\n",
+    "    y = np.array(values)\n",
+    "    x = np.arange(len(y))\n",
+    "    \n",
+    "    # Compute first and second derivatives\n",
+    "    dy = np.gradient(y)\n",
+    "    d2y = np.gradient(dy)\n",
+    "    \n",
+    "    # Compute curvature\n",
+    "    curvature = np.abs(d2y) / (1 + dy**2)**1.5\n",
+    "    \n",
+    "    # Return the point of maximum curvature (ignoring the first and last points)\n",
+    "    if len(curvature) <= 2:\n",
+    "        return 0\n",
+    "    return np.argmax(curvature[1:-1]) + 1"
+   ]
   },
   {
    "cell_type": "code",
