add cluster analysis

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -1838,23 +1838,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reproducibility"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Install latest from the GitHub [repository][repo]:\n",
+    "## Reproducibility and Availability\n",
     "\n",
-    "```sh\n",
-    "$ pip install git+https://github.com/mtinti/cryptosporidium_host_adaptation.git\n",
+    "The complete analysis pipeline is available as a Python package in our GitHub repository\n",
+    "\n",
+    "### Installation\n",
+    "\n",
+    "```bash\n",
+    "pip install git+https://github.com/mtinti/cryptosporidium_host_adaptation.git\n",
     "```\n",
-    "> In your env you want:\n",
-    "- samtools (Version: 1.21) \n",
+    "\n",
+    "### Dependencies\n",
+    "\n",
+    "This pipeline was developed and tested with:\n",
+    "- samtools (Version: 1.21)\n",
     "- bcftools (Version: 1.21)\n",
     "\n",
-    "[repo]: https://github.com/mtinti/cryptosporidium_host_adaptation\n"
+    "### Interactive Analysis\n",
+    "\n",
+    "For interactive exploration and reproducibility, we provide Jupyter notebooks accessible through MyBinder. \n",
+    "> The computational environment includes all necessary dependencies pre-configured.\n"
    ]
   },
   {
