--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| hide\n",
     "%load_ext autoreload\n",
@@ -126,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +456,7 @@
        "4          1:134:83:33,50:33:1084:50:1692:-54.7114,0  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +703,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +891,7 @@
        "6  0.666667  0.745098  0.471698  0.619565  0.602410  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1055,7 @@
        "<Axes: title={'center': 'K-means Evaluation'}, xlabel='Number of Clusters (k)', ylabel='Normalized Score'>"
       ]
      },
-     "execution_count": 98,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1100,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1409,7 +1400,7 @@
        "         82192          1:134:83:33,50:33:1084:50:1692:-54.7114,0  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1429,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1591,7 +1582,7 @@
        "         702605      A  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1617,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1635,7 +1626,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 102,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1654,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1730,7 +1721,7 @@
        "CM000436 170586      C  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1748,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1791,7 +1782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1822,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1874,7 +1865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1937,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1985,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2065,7 +2056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2104,21 +2095,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python delightful_data_analysis",
+   "display_name": "delightful_data_analysis",
    "language": "python",
    "name": "delightful_data_analysis"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.13.2"
   }
  },
  "nbformat": 4,
